--- a/index.html
+++ b/index.html
@@ -1,106 +1,282 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-    
-<h1>CURRÍCULO</h1>
 
-<h3>Huan Carlos Dias Barros</h3>
+    <div class="wrapper">
+        <div class="curriculo">
+            <div class="left">
+                <div class="moldura">
+                    <img src="assets\img\IMG_1285.JPG" alt="foto" style="width: 150px ;">
+                </div>
+                <div class="e_contact pb">
+                    <div class="titulo">
+                        Contato
+                    </div>
+                    <div class="contato">
+                        <ul>
+                            <li class="li-esp">
+                                <div class="texto1">Telefone:</div>
+                                <div class="texto">(27) 99646-0903</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto1">E-mail:</div>
+                                <div class="texto">huancdbarros@gmail.com</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto1">GitHub:</div>
+                                <div class="texto">https://github.com/Huancdb</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
-<img width="80px" src="E:\IMAGENS\Minhas Imagens\USA\IMG_1285.JPG" alt="">
+                <div class="e_skills pb">
+                    <div class="titulo">
+                        Habilidades
+                    </div>
+                    <div class="skills">
+                        <ul>
+                            <li class="li-esp">
+                                <div class="texto">INGLÊS - FLUENTE</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">JAVA</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">C#</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">HTML</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">CSS</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">UNITY</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">ECLIPSE</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">VS STUDIO E CODE</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">MONODEVELOP</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
-<p>Vitória - ES</p>
-<p>Telefone: (27) 996460903</p>
-<p>Email: huancdbarros@gmail.com </p>
+                <div class="e_hobbies pb">
+                    <div class="titulo">
+                        Hobbies
+                    </div>
+                    <div class="hobbies">
+                        <ul>
+                            <li class="li-esp">
+                                <div class="texto">TECNOLOGIA</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">MÚSICA</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">VIAGEM</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">GAMES</div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
-<h2>OBJETIVOS</h2>
-<hr></hr>
-<p>Crescimento profissional. Fazer do trabalho uma contribuição para o desenvolvimento da empresa.</p>
-<p>Áreas de interesse: Desenvolvedor, DataScience e áreas afins de TI</p>
+                <div class="e_info pb">
+                    <div class="titulo">
+                        Informações Adicionais
+                    </div>
+                    <div class="info_add">
+                        <ul>
+                            <li class="li-esp">
+                                <div class="texto">- 1º lugar Prêmio de Economia do Espírito Santo 2015. Categoria:
+                                    Artigo.
+                                    <br>
+                                    Tema: Crédito Rural no Espírito Santo: Análise dos resultados dos anos 2000 a 2012.
+                                </div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">- App acessório para jogo de tabuleiro desenvolvido no Unity</div>
+                            </li>
+                            <li class="li-esp">
+                                <div class="texto">- Coeficiente de Rendimento atual: 9,31</div>
+                            </li>
 
-<h2>FORMAÇÃO</h2>
-<hr></hr>
-<p>Ensino superior completo - Ciências Econômicas, UFES - Graduado em: maio/2015.</p>
-<p>Cursando:</p>
-<p>Técnólogo em Anáise e Desenvolvimento de Sistemas de Informação - FAESA</p>
-<p>3° período. Início em: 2019/2</p>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="header">
+                    <div class="e-nome">
+                        <div class="nome">
+                            Huan Carlos Dias Barros
+                        </div>
+                        <div class="cargo">
+                            Desenvolvedor Jr.
+                        </div>
+                    </div>
+                    <div class="info">
+                        <p>28 anos. Data de Nascimento: 14/02/1992</p>
+                        <p>Vitória - ES</p>
+                        <br>
+                        <p>Áreas de interesse: Desenvolvimento de Sistemas, DataScience e áreas afins de TI</p>
+                    </div>
+                </div>
+                <div class="right_int">
+                    <div class="exp">
+                        <div class="titulo">
+                            Experiência
+                        </div>
+                        <div class="e-exp">
+                            <ul>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2016 - 2017</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">Agente de Relacionamento</p>
+                                            <p class="sobre_com">WINE.com</p>
+                                            <p class="sobre_cont">
+                                                - Atendimento ativo e receptivo (e-mail, chat e telefone);
+                                                <br>
+                                                - Construção e análise de planilhas (Excel);
+                                                <br>
+                                                - Ánalise de processos de trabalho.
+                                            </p>
+                                        </div>
+                                    </div>
 
-<h2>EXPERIÊNCIA PROFISSIONAL</h2>
-<hr></hr>
-<p>CAIXA ECONÔMICA FEDERAL – GECRE (Março/2012 – Novembro/2012)</p>
-<p>Cargo: Estagiário – Setor de Recuperação de Crédito</p>
-<p>Principais Atividades:</p>
-<p>- Gerenciamento dos contratos bancários;</p>
-<p>- Intermediário entre setor de Recuperação de crédito e Jurídico da empresa.</p>
+                                </li>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2014 - 2015</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">Lifeguard</p>
+                                            <p class="sobre_com">GREAT WOLF LODGE</p>
+                                            <p class="sobre_cont">
+                                                Programa de Intercâmbio USA
+                                                <br>
+                                                - Segurança e manutenção do parque aquático.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2012 - 2014</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">Estagiário</p>
+                                            <p class="sobre_com">BANCO DE DESENVOLVIMENTO DO ES</p>
+                                            <p class="sobre_cont">
+                                                - Gerenciamento de projetos das empresas solicitantes ao incentivo
+                                                fiscal;
+                                                <br>
+                                                - Construção de relatório anual para presidente do banco, Governador do
+                                                Estado e Secretaria da Fazenda - ES;
+                                                <br>
+                                                - Apoio em visitas técnicas e emissão de relatórios de visitas.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2012</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">Estagiário</p>
+                                            <p class="sobre_com">CAIXA ECONÔMICA FEDERAL</p>
+                                            <p class="sobre_cont">
+                                                - Gerenciamento dos contratos bancários;
+                                                <br>
+                                                - Intermediário entre setor de Recuperação de crédito e Jurídico da
+                                                empresa.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="formacao">
+                        <div class="titulo">
+                            Formação
+                        </div>
+                        <div class="e-form">
+                            <ul>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2019 - Presente</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">TECNÓLOGO EM ANÁLISE E DESENVOLVIMENTO DE SISTEMAS
+                                            </p>
+                                            <p class="sobre_com">FAESA</p>
+                                            <p class="sobre_cont"></p>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="li-esp">
+                                        <div class="data">2010 - 2015</div>
+                                        <div class="sobre">
+                                            <p class="sobre_titulo">BACHAREL EM CIÊNCIAS ECONÔMICAS</p>
+                                            <p class="sobre_com">UFES</p>
+                                            <p class="sobre_cont">
+
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                </li>
+
+
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 <br>
-<p>BANCO DE DESENVOLVIMENTO DO ESPÍRITO SANTO – GEDEP E GECRE (Novembro/2012 – Maio/2014)</p>
-<p>Cargo: Estagiário – Setor de Incentivos Fiscais e Crédito</p>
-<p>Principais Atividades:</p>
-<p>Gerenciamento de projetos das empresas solicitantes ao incentivo fiscal;
-<p>- Construção de relatório anual para presidente do banco, Governador do Estado e Secretaria da Fazenda - ES;
-<p>- Apoio em visitas técnicas e emissão de relatórios de visitas.
-<br>
-<p>GREAT WOLF LODGE (Dezembro/2014 – Março/2015)</p>
-<p>Programa de Work Experience – Wisconsin, USA</p>
-<p>Cargo: Lifeguard</p>
-<p>Principais Atividades:</p>
-<p>- Segurança e manutenção do parque aquático.</p>
-<br>
-<p>W2W E-COMMERCE DE VINHOS S/A – WINE (Agosto/2016 - Setembro/2017)</p>
-<p>Cargo: Agente de Relacionamento</p>
-<p>Principais atividades:</p>
-<p>- Atendimento ativo e receptivo (e-mail, chat e telefone);</p>
-<p>- Construção e análise de planilhas (Excel).</p>
+    <div class="cont_dir">
+        <h3>Ficou interessado? <br> Entre em contato!</h3>
 
-<h2>QUALIFICAÇÕES</h2>
-<hr></hr>
-<p>Inglês – Avançado; Pacote Office – Intermediário.</p>
-<li>Linguagens de Programação:</li>
-<p>Java – Básico</p>
-<p>C# - Básico</p>
-<li>Outros:</li>
-<p>Eclipse</p>
-<p>Vs Studio e Code</p>
-<p>MonoDevelop</p>
-<p>Unity</p>
+        <form action="">
+            <label for="nome">Seu Nome:</label><br>
+            <input type="text" id="nome" name="nome"><br>
+            <label for="telefone">Telefone:</label><br>
+            <input type="text" id="telefone" name="telefone"><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email"><br>
+            <label for="msg">Mensagem:</label><br>
+            <input type="text" id="msg" name="msg"><br>
+            <br>
+            <button>
+                Enviar
+            </button>
 
-
-<h2>INFORMAÇÕES ADICIONAIS</h2>
-<hr></hr>
-<li>Economia:</li>
-<p>- 1º lugar Prêmio de Economia do Espírito Santo 2015. Categoria: Artigo.</p>
-<p>Tema: Crédito Rural no Espírito Santo: Análise dos resultados dos anos 2000 a 2012.</p>
-<li>TI:</li>
-<p>- App acessório para jogo de tabuleiro feito no Unity, linguagem C#.</p>
-<li>Outros:</li>
-<p>- CNH B</p>
-<p>- Coeficiente de Rendimento (FAESA): 9,31</p>
-<li>Em aprendizagem no período atual:</li>
-<p>- Banco de Dados e MySQL</p>
-<p>- HTML5</p>
-<p>- CSS</p>
-
-<h3>Ficou interessado? <br> Entre em contato!</h3>
-    
-<form action="">
-    <label for="nome">Seu Nome:</label><br>
-    <input type="text" id="nome" name="nome"><br>
-    <label for="telefone">Telefone:</label><br>
-    <input type="text" id="telefone" name="telefone"><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email"><br>
-    <label for="msg">Mensagem:</label><br>
-    <input type="text" id="msg" name="msg"><br>
-    <br>
-    <button>
-        Enviar
-    </button>
-
-</form>
-
+        </form>
+    </div>
 </body>
+
 </html>
